--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
-    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>melonJS ES6 Webpack boilerplate</title>
-  </head>
-  <body>
-      <!-- Canvas placeholder -->
-      <div id="screen"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            id="viewport"
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+        />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <title>melonJS ES6 Webpack boilerplate</title>
+    </head>
+    <body>
+        <div id="screen"></div>
+    </body>
 </html>
