--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1"
         />
-        <title>Phaser Game</title>
+        <title>ALiVE</title>
     </head>
 
     <body></body>
