--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta
             name="viewport"
             content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1"
         />
+        <link rel="stylesheet" href="/static/main.css" />
         <title>ALiVE</title>
     </head>
 
