feat: set main menu

--- a/frontend/phaser/index.html
+++ b/frontend/phaser/index.html
@@ -8,6 +8,7 @@
         />
         <link rel="stylesheet" href="/static/main.css" />
         <title>ALiVE</title>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </head>
 
     <body></body>
