--- a/frontend/phaser/index.html
+++ b/frontend/phaser/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
+<head>
+    <meta charset="UTF-8">
+    <meta
             name="viewport"
             content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1"
         />
-        <link rel="stylesheet" href="/static/main.css" />
-        <title>ALiVE</title>
-    </head>
-
-    <body></body>
+    <title>ALiVE</title>
+</head>
+<body>
+    <main id="game"></main>
+</body>
 </html>
