dynamic scene background

--- a/frontend/phaser/index.html
+++ b/frontend/phaser/index.html
@@ -7,8 +7,16 @@
             content="user-scalable=0, initial-scale=1,minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1"
         />
     <title>ALiVE</title>
+    <style>
+    html,
+    body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #000000;
+    }
+    </style>
 </head>
 <body>
-    <main id="game"></main>
 </body>
 </html>
